# returnsuite-website

./: .editorconfig  .gitignore  README.md  documentation-sections.md  pyproject.toml  website.sh
docs/en/docs/stylesheets/: extra.css
docs/en/theme/: 404.html  base.html
scripts/css/: input.css  tailwind.config.js
src/returnsuite_website/: main.py
src/returnsuite_website/content/en/: nav.yml
src/returnsuite_website/core/: config.py  html.py  localization.py  logging.py
src/returnsuite_website/core/settings/: app.py  base.py  dev.py  prod.py  stage.py  test.py
src/returnsuite_website/resources/css/: styles.css
src/returnsuite_website/resources/localizations/: languages.json
src/returnsuite_website/routes/: blog.py  contact.py  cta.py  docs.py  handlers.py  health.py  landing.py  not_found.py  paging.py  posts.json  pricing.py  styles.py  system.py  utils.py  web.py
src/returnsuite_website/services/: database.py  docs_service.py  email.py  localization_directory.py  search.py  search2.py  spam.py
src/returnsuite_website/templates/: about.html.jinja2  contact.html.jinja2  demo.html.jinja2  docs.html.jinja2  flex-leasing-beta-partner.html.jinja2  index.html.jinja2  index2.html.jinja2  index3.html.jinja2  landing-images.html.jinja2  landing-images2.html.jinja2  layout.html.jinja2  pricing.html.jinja2  privacy.html.jinja2  terms.html.jinja2
tests/: test_search_index.py
tests/routes/: test_blog.py  test_contact.py  test_cta.py  test_health.py  test_landing.py  test_not_found.py  test_styles.py  utils.py
tests/services/: test_database.py  test_spam.py
(+176 files in other folders)
